fix: Command Pallete jumping around while opening

--- a/src/vs/platform/quickinput/browser/media/quickInput.css
+++ b/src/vs/platform/quickinput/browser/media/quickInput.css
@@ -31,11 +31,11 @@
 @keyframes quick-input-widget-entry {
 	from {
 		opacity: 0;
-		transform: translate(-50%, -50%) scale(0.95);
+		transform: scale(0.95);
 	}
 	to {
 		opacity: 1;
-		transform: translate(-50%, -50%) scale(1);
+		transform: scale(1);
 	}
 }
 
@@ -43,11 +43,11 @@
 @keyframes quick-input-widget-exit {
 	from {
 		opacity: 1;
-		transform: translate(-50%, -50%) scale(1);
+		transform: scale(1);
 	}
 	to {
 		opacity: 0;
-		transform: translate(-50%, -50%) scale(0.95);
+		transform: scale(0.95);
 	}
 }
 
